--- a/tesis/tesis.tex
+++ b/tesis/tesis.tex
@@ -352,7 +352,7 @@ By considering the length of the sequence on each side of the previous equation,
 
 \begin{equation}\label{equation:n-p-q-r}
   \begin{aligned}
-    N & = \sum_{s = 1}^{r - 1} |D(s)| + q |C(r)| + p \\
+    N & = \sum_{s = 1}^{r - 1} |D^{(s)}| + q |C^{(r)}| + p \\
       & = \sum_{s = 1}^{r - 1} t(s) s^s + q r^r + p \text{.}
   \end{aligned}
 \end{equation}
